# QuickScan

./: README.md
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  forced-user.py  pyproject.toml  seed.py  test_db.py  test_scan_flow.py
backend/app/: main.py
backend/app/api/: attendance.py  audit.py  auth.py  deps.py  qr.py  sessions.py
backend/app/core/: config.py  geo.py  roll_no.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attendance.py  enrollment.py  ledger.py  organization.py  session.py  user.py
backend/app/schemas/: attendance.py  auth.py  qr.py
backend/migrations/: env.py
backend/migrations/versions/: 544ef1216da3_add_enrollment_code.py  5e8692fe786e_add_geolocation_to_sessions_attendance_.py  7ed2be47d9a2_drop_device_id_unique_constraint.py  8d7056226ce8_add_organizations_and_departments.py  92c3fac6449a_add_roll_no_to_users.py  a3d20239354f_create_users_table.py  b03f7e1cf9a8_make_roll_no_unique_for_students.py  b5d7c18730ee_create_users_table.py  ba18a323aabc_add_attendance_model.py  ca961b7c8cf4_create_sessions_and_enrollments.py  d8fde306bf38_fix_enrollment_fk_and_add_audit_ledger_.py  f295cad4d158_create_sessions_and_enrollments.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts  useGoogleSignIn.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Register.tsx  Scan.tsx
